# offlineimap3

./: README.md  pyproject.toml  requirements-testinternet.txt  requirements.txt  setup.py
docs/doc-src/: conf.py
offlineimap/: accounts.py  imapserver.py
offlineimap/utils/: distro_utils.py
