[project]
dependencies = [
    "distro",
    "imaplib2>=3.5",
    "rfc6555",
    "urllib3~=1.25.9"
]
name = "offlineimap"
version = "8.0.1"
description = "IMAP synchronization tool"
authors = [
    { name = "John Goerzen & contributors", email = "jgoerzen@complete.org" }
]
license = "GPL-2.0-or-later"
license-files = ["COPYING"]
readme = "README.md"
keywords = ["client", "imap", "cli", "email", "mail", "synchronization", "sync", "offline"]
requires-python = ">=3.6"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities"
]

[project.urls]
homepage = "http://www.offlineimap.org"
documentation = "https://www.offlineimap.org/documentation.html"
issues = "https://github.com/OfflineIMAP/offlineimap3/issues"
repository = "https://github.com/OfflineIMAP/offlineimap3/"

[build-system]
requires = [
    "setuptools>=18.5",
    "wheel"
]

[project.optional-dependencies]
keyring = ["keyring"]
cygwin = ["portalocker[cygwin]"]
kerberos = ["gssapi[kerberos]"]
testinternet = ["certifi~=2020.6.20"]

[project.scripts]
offlineimap = "offlineimap.init:main"
